--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,30 @@ html,body{
      border: 3px inset black;
      background-color: #424242;
 }
+
+
+#field{
+    display: table;
+    width: auto;
+    border: 4px solid black;
+    text-align: center;
+}
+
+#row{
+    display:table-row;
+    width: auto;
+    clear: both;
+}
+
+#cell{
+  width: 50px;
+  height: 29px;
+  border-right: 1px solid black;
+  border-bottom: 1px solid black;
+  float: left;
+  margin: 0px auto;
+  padding: 0px;
+  display: grid;
+  align-content: center;
+  justify-content: center;
+}
