--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ html,body{
   float: left;
   margin: 0px auto;
   padding: 0px;
-  display: inline;
+  display: flex;
   align-content: center;
   justify-content: center;
 }
