--- a/css/style.css
+++ b/css/style.css
@@ -32,12 +32,20 @@ html,body{
     width: auto;
     border: 4px solid black;
     text-align: center;
+    padding: 0px;
+    margin: 0px;
 }
 
-#row{
+.row{
     display: flex;
     width: auto;
     clear: both;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    white-space: nowrap;
+    overflow: hidden;
+    padding: 0px;
+    margin: 0px;
   }
 
 .cell{
@@ -52,12 +60,4 @@ html,body{
   align-content: center;
   justify-content: center;
   background-color: white;
-}
-
-.no-wrapping{
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  white-space: nowrap;
-  overflow: hidden;
 }
